add subsistema-interno